--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -126,81 +126,54 @@ jobs:
                          echo "AMI_ID=$AMI_ID" >> $GITHUB_OUTPUT
         shell: bash
 
-      - name: 2 Extract Latest Launch Template Version
+      # Configure AWS Credentials for Dev Account
+      - name: Configure AWS Credentials for Dev Account
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_CLI }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_CLI }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Extract Latest Launch Template Version
         id: fetch_latest_version
         run: |
-          # Configure AWS CLI with development credentials for this step
-          aws-actions/configure-aws-credentials@v4:
-            with:
-              aws-access-key-id: ${{ secrets.AWS_SECRET_ACCESS_KEY_CLI }}
-              aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_CLI }}
-              aws-region: ${{ secrets.AWS_REGION }}
-
           LATEST_VERSION=$(aws ec2 describe-launch-templates \
             --launch-template-name "${{ secrets.AWS_LAUNCH_TEMPLATE_NAME_DEV }}" \
             --query 'LaunchTemplates[0].LatestVersionNumber' \
             --output text)
           echo "LATEST_VERSION=${LATEST_VERSION}" >> $GITHUB_ENV
 
-      - name: 3 Create New Launch Template Version
+      - name: Create New Launch Template Version
         id: create_new_version
         run: |
-          # Configure AWS CLI with development credentials for this step
-          aws-actions/configure-aws-credentials@v4:
-            with:
-              aws-access-key-id: ${{ secrets.AWS_SECRET_ACCESS_KEY_CLI }}
-              aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_CLI }}
-              aws-region: ${{ secrets.AWS_REGION }}
-
           NEW_VERSION=$(aws ec2 create-launch-template-version \
             --launch-template-name "${{ secrets.AWS_LAUNCH_TEMPLATE_NAME_DEV }}" \
             --source-version ${{ env.LATEST_VERSION }} \
-            --launch-template-data '{"ImageId":" ${{ env.AMI_ID }}"}' \
+            --launch-template-data '{"ImageId":"'"${{ env.AMI_ID }}"'"}' \
             --query 'LaunchTemplateVersion.VersionNumber' \
             --output text)
           echo "NEW_VERSION=${NEW_VERSION}" >> $GITHUB_ENV
 
-      - name: 4 Update Auto Scaling Group
+      - name: Update Auto Scaling Group
         run: |
-          # Configure AWS CLI with development credentials for this step
-          aws-actions/configure-aws-credentials@v4:
-            with:
-              aws-access-key-id: ${{ secrets.AWS_SECRET_ACCESS_KEY_CLI }}
-              aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_CLI }}
-              aws-region: ${{ secrets.AWS_REGION }}
-
           aws autoscaling update-auto-scaling-group \
             --auto-scaling-group-name "${{ secrets.AWS_AUTOSCALING_GROUP_NAME_DEV }}" \
             --launch-template "LaunchTemplateName=${{ secrets.AWS_LAUNCH_TEMPLATE_NAME_DEV }},Version=${{ env.NEW_VERSION }}"
 
-      - name: 5 Start Instance Refresh
+      - name: Start Instance Refresh
         id: start_instance_refresh
         run: |
-          # Configure AWS CLI with development credentials for this step
-          aws-actions/configure-aws-credentials@v4:
-            with:
-              aws-access-key-id: ${{ secrets.AWS_SECRET_ACCESS_KEY_CLI }}
-              aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_CLI }}
-              aws-region: ${{ secrets.AWS_REGION }}
-
           REFRESH_ID=$(aws autoscaling start-instance-refresh \
             --auto-scaling-group-name "${{ secrets.AWS_AUTOSCALING_GROUP_NAME_DEV }}" \
             --preferences '{"InstanceWarmup": 300, "MinHealthyPercentage": 50}' \
             --query 'InstanceRefreshId' --output text)
           echo "REFRESH_ID=${REFRESH_ID}" >> $GITHUB_ENV
 
-      - name: 6 Wait for Instance Refresh
+      - name: Wait for Instance Refresh
         run: |
-          # Configure AWS CLI with development credentials for this step
-          aws-actions/configure-aws-credentials@v4:
-            with:
-              aws-access-key-id: ${{ secrets.AWS_SECRET_ACCESS_KEY_CLI }}
-              aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_CLI }}
-              aws-region: ${{ secrets.AWS_REGION }}
-
           while true; do
             STATUS=$(aws autoscaling describe-instance-refreshes \
-              --auto-scaling-group-name  "${{ secrets.AWS_AUTOSCALING_GROUP_NAME_DEV }}" \
+              --auto-scaling-group-name "${{ secrets.AWS_AUTOSCALING_GROUP_NAME_DEV }}" \
               --query "InstanceRefreshes[?InstanceRefreshId=='${{ env.REFRESH_ID }}'].Status" \
               --output text)
             echo "Current status: $STATUS"
