--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -149,7 +149,7 @@ jobs:
           NEW_VERSION=$(aws ec2 create-launch-template-version \
             --launch-template-name "${{ secrets.AWS_LAUNCH_TEMPLATE_NAME_DEV }}" \
             --source-version ${{ env.LATEST_VERSION }} \
-            --launch-template-data '{"ImageId":"'"${{ env.AMI_ID }}"'"}' \
+            --launch-template-data '{"ImageId":"${{ env.AMI_ID }}"}' \
             --query 'LaunchTemplateVersion.VersionNumber' \
             --output text)
           echo "NEW_VERSION=${NEW_VERSION}" >> $GITHUB_ENV
