--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -117,6 +117,13 @@ jobs:
                         -var aws_region=${{ secrets.AWS_REGION }} \
                         -var instance_type=${{ secrets.INSTANCE_TYPE }} \
                         packer/aws-ubuntu.pkr.hcl | tee packer_output.log
+      # Configure AWS Credentials for Dev Account
+      - name: Configure AWS Credentials for Dev Account
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_CLI }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_CLI }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: 1 Extract the AMI ID Dev
         id: get_ami_dev
@@ -127,80 +134,27 @@ jobs:
                          echo "AMI_ID=${AMI_ID}" >> $GITHUB_ENV
         shell: bash
 
-      # Configure AWS Credentials for Dev Account
-      - name: Configure AWS Credentials for Dev Account
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_CLI }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_CLI }}
-          aws-region: ${{ secrets.AWS_REGION }}
+      - name: Get Launch Templates
+        id: get-launch-template
+        run: echo "launch_template_id=$(aws ec2 describe-launch-templates | jq ".LaunchTemplates[0].LaunchTemplateId" | tr -d '"')" >> $GITHUB_ENV
 
-      - name: Extract Latest Launch Template Version
-        id: fetch_latest_version
+      - name: Export ID to env and print to check
+        id: export-ids
         run: |
-          LATEST_VERSION=$(aws ec2 describe-launch-templates \
-            --launch-template-name "${{ secrets.AWS_LAUNCH_TEMPLATE_NAME_DEV }}" \
-            --query 'LaunchTemplates[0].LatestVersionNumber' \
-            --output text)
-          echo "LATEST_VERSION=${LATEST_VERSION}" >> $GITHUB_ENV
+          echo $AMI_ID
+          echo $launch_template_id
+          echo "ASG_NAME=$(aws autoscaling describe-auto-scaling-groups  | jq '.AutoScalingGroups[0].AutoScalingGroupName' | tr -d '"')" >> $GITHUB_ENV
 
-      - name: Create New Launch Template Version
-        id: create_new_version
+      - name: Create new Launch Template
+        id: version-launch-template
+        run: aws ec2 create-launch-template-version --launch-template-id $launch_template_id  --source-version 1  --launch-template-data "{\"ImageId\":\"$AMI_ID\"}"
+
+      - name: Get ASG Name and Refresh
+        id: get-asg
         run: |
-          NEW_VERSION=$(aws ec2 create-launch-template-version \
-            --launch-template-name "${{ secrets.AWS_LAUNCH_TEMPLATE_NAME_DEV }}" \
-            --source-version ${{ env.LATEST_VERSION }} \
-             --launch-template-data "{\"ImageId\":\"${{ env.AMI_ID }}\"}" \
-            --query 'LaunchTemplateVersion.VersionNumber' \
-            --output text)
-          echo "NEW_VERSION=${NEW_VERSION}" >> $GITHUB_ENV
-
-      - name: Update Auto Scaling Group
-        run: |
-          set -e  # Exit on any error
-          echo "Updating Auto Scaling Group with the following details:"
-          echo "Auto Scaling Group Name: $AWS_AUTOSCALING_GROUP_NAME_DEV"
-          echo "Launch Template ID: $AWS_LAUNCH_TEMPLATE_ID"
-          echo "Launch Template Version: $NEW_VERSION"
-
-          aws autoscaling update-auto-scaling-group \
-            --auto-scaling-group-name "$AWS_AUTOSCALING_GROUP_NAME_DEV" \
-            --launch-template "LaunchTemplateId=$AWS_LAUNCH_TEMPLATE_ID,Version=$NEW_VERSION"
-
-          echo "Auto Scaling Group updated successfully."
-        env:
-          AWS_AUTOSCALING_GROUP_NAME_DEV: ${{ secrets.AWS_AUTOSCALING_GROUP_NAME_DEV }}
-          AWS_LAUNCH_TEMPLATE_ID: ${{ secrets.AWS_LAUNCH_TEMPLATE_ID }}
-          NEW_VERSION: ${{ env.NEW_VERSION }}
-
-      - name: Start Instance Refresh
-        id: start_instance_refresh
-        run: |
-          REFRESH_ID=$(aws autoscaling start-instance-refresh \
-            --auto-scaling-group-name "${{ secrets.AWS_AUTOSCALING_GROUP_NAME_DEV }}" \
-            --preferences '{"InstanceWarmup": 300, "MinHealthyPercentage": 50}' \
-            --query 'InstanceRefreshId' --output text)
-          echo "REFRESH_ID=${REFRESH_ID}" >> $GITHUB_ENV
-
-      - name: Wait for Instance Refresh
-        run: |
-          while true; do
-            STATUS=$(aws autoscaling describe-instance-refreshes \
-              --auto-scaling-group-name "${{ secrets.AWS_AUTOSCALING_GROUP_NAME_DEV }}" \
-              --query "InstanceRefreshes[?InstanceRefreshId=='${{ env.REFRESH_ID }}'].Status" \
-              --output text)
-            echo "Current status: $STATUS"
-            if [ "$STATUS" == "Successful" ]; then
-              echo "Instance refresh completed successfully."
-              exit 0
-            elif [ "$STATUS" == "Failed" ]; then
-              echo "Instance refresh failed."
-              exit 1
-            else
-              echo "Waiting for instance refresh to complete..."
-              sleep 30
-            fi
-          done
+          echo $ASG_NAME
+          REFRESH_ID=$(aws autoscaling start-instance-refresh --auto-scaling-group-name $ASG_NAME --query "InstanceRefreshId" --output text)
+          echo "REFRESH_ID=$REFRESH_ID" >> $GITHUB_ENV
 
       # - name: Update AWS Launch template for Dev
       #   run: |
